"Fixed layout and alignment of project timeline on mobile devices"

--- a/src/assets/sass/now-ui-kit/_custom.scss
+++ b/src/assets/sass/now-ui-kit/_custom.scss
@@ -305,3 +305,54 @@ iframe {
   justify-content: center;
   width: 100%;
 }
+
+// @media screen and (max-width: 576px) {
+//   .p-timeline-right .p-timeline-event-opposite {
+//     display: none !important;
+//   }
+// }
+
+::ng-deep {
+  .p-timeline-event-content {
+    line-height: 1;
+  }
+  .p-timeline-event-opposite {
+    display: none !important;
+      line-height: 1;
+  }
+}
+
+@media screen and (max-width: 960px) {
+  .p-timeline-event {
+    min-height: auto !important;
+    height: auto !important;
+  }
+
+  .p-timeline-event .p-card.p-component {
+    min-height: auto !important;
+    height: auto !important;
+    margin-top: 20px !important;
+  }
+
+  ::ng-deep {
+    .customized-timeline {
+      // .p-timeline-event:nth-child(even) {
+      //   flex-direction: row !important;
+      //   .p-timeline-event-content {
+      //     text-align: left !important;
+      //   }
+      // }
+      .p-timeline-event-opposite {
+        flex: 0;
+        padding: 0 1rem 0 0 !important;
+      }
+      .p-card {
+        margin-top: 1rem;
+      }
+    }
+  }
+
+  .p-timeline.p-timeline-vertical .p-timeline-event-opposite {
+    display: none !important;
+  }
+}
